# FishTracker

./: .gitignore  CMakeLists.txt  README.md  trackinglog.txt
platform/osx/: CMakeLists.txt
platform/windows/: CMakeLists.txt  qt.conf
sources/application/: CMakeLists.txt  Common.cpp  Common.h  MainWindow.cpp  MainWindow.h  Network.cpp  Network.h  Tracker.cpp  Tracker.h  VideoPlayer.cpp  VideoPlayer.h  main.cpp
sources/application/resources/stylesheet/: __lightstyle.qss  lightstyle.qss  style.qrc
sources/libraries/imageprocessing/: CMakeLists.txt  Common.h
sources/libraries/videoplayer/: CMakeLists.txt  player.cpp  player.h  playercontrols.cpp  videowidget.cpp
sources/tests/: CmakeLists.txt  MyFirstTest.cpp
